# kurs_project_2

./: README.md  main.py  pyproject.toml
src/: hh_api.py  save_vacancies.py  utils.py  work_with_vacancies.py
tests/: test_hh_api.py  test_save_vacancies.py  test_utils.py  test_work_with_vacancies.py
