[tool.poetry]
name = "kurs-project-2"
version = "0.1.0"
description = ""
authors = ["Daniil <danilayukin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
requests = "^2.32.3"
pytest = "^8.3.3"
python-dotenv = "^1.0.1"
pytest-cov = "^5.0.0"
requests-mock = "^1.12.1"


[tool.isort]
line_length = 119


[tool.black]
line-length = 119
exclude = '''
(
  /(       # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.mypy_cache
    | \.venv
  )/
)
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
